Fix table alignment on mobile

--- a/src/StatusExposed/wwwroot/css/site.css
+++ b/src/StatusExposed/wwwroot/css/site.css
@@ -183,8 +183,4 @@ blockquote p {
         background-color: #062137;
         min-width: 100%;
     }
-
-    .services-list-table {
-        width: 90vw;
-    }
 }
